--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
+<!-- C'est une page de test pour tester le fonctionnement du Recaptcha -->
+
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
   <head>
     <meta charset="utf-8" />
@@ -13,7 +11,9 @@
     <link rel="stylesheet" href="" />
   </head>
   <body>
-    <form method="post" action="">
+    
+    <!-- Quand on clique sur le bouton ça appelle la fonction "submit" avec le Recaptcha -->
+    <form method="post" action="{{ url_for('submit') }}">
       <input type="submit" value="Submit" />
     </form>
 
